[gd_scene load_steps=33 format=4 uid="uid://bktq4cwp01peb"]

[ext_resource type="Script" uid="uid://b41sd6f24uo6m" path="res://scenes/arena/arena.gd" id="1_a1ak0"]
[ext_resource type="TileSet" uid="uid://de57fp7kv3q7p" path="res://scenes/arena/tileset.tres" id="1_hreld"]
[ext_resource type="Script" uid="uid://bjpwt5bxytift" path="res://components/tile_highlighter.gd" id="2_855b2"]
[ext_resource type="Texture2D" uid="uid://mbxv0ayrsu3d" path="res://assets/sprites/star_particle.png" id="2_m4bap"]
[ext_resource type="AudioStream" uid="uid://dwse76yhsgxvm" path="res://assets/music/alexander_ehlers_twists.ogg" id="2_r0ixp"]
[ext_resource type="Script" uid="uid://uvsfghdjbevs" path="res://components/unit_grid.gd" id="4_m7ydk"]
[ext_resource type="Script" uid="uid://u2t3uyy0x3fn" path="res://components/play_area.gd" id="6_73s8l"]
[ext_resource type="PackedScene" uid="uid://dk0bcfpbo130r" path="res://scenes/sell_portal/sell_portal.tscn" id="8_4fftf"]
[ext_resource type="Script" uid="uid://cbgx7ltfhbph1" path="res://components/unit_mover.gd" id="9_snp81"]
[ext_resource type="Resource" uid="uid://doebgx0llcf1o" path="res://data/unit_pool/unit_pool.tres" id="10_if8r1"]
[ext_resource type="Resource" uid="uid://dlnsfkjue2dlt" path="res://data/player/player_stats.tres" id="10_n3gg6"]
[ext_resource type="Script" uid="uid://c1mmqo5u7scxk" path="res://components/unit_combiner.gd" id="11_ex2js"]
[ext_resource type="PackedScene" uid="uid://ds3bb3ob0014f" path="res://scenes/bench_item/bench_item.tscn" id="11_o7rjm"]
[ext_resource type="AudioStream" uid="uid://xgrsj3clmat0" path="res://assets/sfx/unit_place.ogg" id="12_niusb"]
[ext_resource type="Resource" uid="uid://y8urtd3hnktb" path="res://data/items/gloves.tres" id="12_xr6px"]
[ext_resource type="PackedScene" uid="uid://bhhtibvtken5o" path="res://scenes/shop/shop.tscn" id="13_256pg"]
[ext_resource type="Script" uid="uid://dpd7c8rqccxl3" path="res://components/unit_spawner.gd" id="13_elhf4"]
[ext_resource type="Resource" uid="uid://cwdni4hysacqp" path="res://data/items/ring.tres" id="13_vspv4"]
[ext_resource type="AudioStream" uid="uid://dubwbrp3e8hg3" path="res://assets/sfx/combine.ogg" id="15_2p0aq"]
[ext_resource type="Script" uid="uid://crlwtnh8tx0mn" path="res://components/scene_spawner.gd" id="15_l0cts"]
[ext_resource type="Script" uid="uid://buc1n7o4i2bc0" path="res://components/battle_handler.gd" id="16_kcd4n"]
[ext_resource type="PackedScene" uid="uid://cxgnlha7i81v2" path="res://scenes/traits/traits.tscn" id="16_uy14c"]
[ext_resource type="PackedScene" uid="uid://bd6jhfp83q1rv" path="res://scenes/unit/unit.tscn" id="16_ybinm"]
[ext_resource type="Resource" uid="uid://colcuq2f1xv6x" path="res://data/game_state/game_state.tres" id="17_5rf3s"]
[ext_resource type="PackedScene" uid="uid://cvarsvlo70pgx" path="res://scenes/team_size_ui/team_size_ui.tscn" id="17_gxlm5"]
[ext_resource type="Script" uid="uid://bn4qscjt1rk1v" path="res://components/debug_draw.gd" id="18_alc7u"]
[ext_resource type="PackedScene" uid="uid://bg1r2rkbd021" path="res://scenes/battle_unit/battle_unit.tscn" id="20_ybinm"]
[ext_resource type="Script" uid="uid://doeqhx1ghnj38" path="res://components/trait_tracker.gd" id="21_5ilg6"]
[ext_resource type="PackedScene" uid="uid://chkfh7chgsbwk" path="res://scenes/start_battle_button/start_battle_button.tscn" id="22_opmde"]

[sub_resource type="Curve" id="Curve_kxla4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.227273, 1), 0.0, 0.0, 0, 0, Vector2(0.791667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_l00ks"]
curve = SubResource("Curve_kxla4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_76jh2"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(320, 1, 1)
spread = 180.0
initial_velocity_min = 20.0
initial_velocity_max = 30.0
angular_velocity_min = 20.0
angular_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.2
scale_curve = SubResource("CurveTexture_l00ks")
color = Color(1, 1, 1, 0.498039)

[node name="Arena" type="Node2D"]
script = ExtResource("1_a1ak0")
arena_music_stream = ExtResource("2_r0ixp")
metadata/_edit_lock_ = true

[node name="Visuals" type="Node2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Background" type="TileMapLayer" parent="Visuals"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAYAAAAAAAEAAQAAAAYAAAAAAAIAAQAAAAYAAAAAAAMAAQAAAAYAAAAAAAQAAQAAAAYAAAAAAAUAAQAAAAYAAAAAAAYAAQAAAAYAAAAAAAcAAQAAAAYAAAAAAAgAAQAAAAYAAAAAAAkAAQAAAAYAAAAAAAoAAQAAAAYAAAABAAAAAQAAAAYAAAACAAAAAQAAAAYAAAADAAAAAQAAAAYAAAAEAAAAAQAAAAYAAAAFAAAAAQAAAAYAAAAGAAAAAQAAAAYAAAAHAAAAAQAAAAYAAAAIAAAAAQAAAAYAAAAJAAAAAQAAAAYAAAAKAAAAAQAAAAYAAAALAAAAAQAAAAYAAAAMAAAAAQAAAAYAAAANAAAAAQAAAAYAAAAOAAAAAQAAAAYAAAAPAAAAAQAAAAYAAAAQAAAAAQAAAAYAAAARAAAAAQAAAAYAAAASAAAAAQAAAAYAAAATAAAAAQAAAAYAAAATAAEAAQAAAAYAAAATAAIAAQAAAAYAAAATAAMAAQAAAAYAAAATAAQAAQAAAAYAAAATAAUAAQAAAAYAAAATAAYAAQAAAAYAAAATAAcAAQAAAAYAAAATAAgAAQAAAAYAAAATAAkAAQAAAAYAAAATAAoAAQAAAAYAAAAAAAsAAQAAAAYAAAABAAsAAQAAAAYAAAACAAsAAQAAAAYAAAADAAsAAQAAAAYAAAAEAAsAAQAAAAYAAAAFAAsAAQAAAAYAAAAGAAsAAQAAAAYAAAAHAAsAAQAAAAYAAAAIAAsAAQAAAAYAAAAJAAsAAQAAAAYAAAAKAAsAAQAAAAYAAAALAAsAAQAAAAYAAAAMAAsAAQAAAAYAAAANAAsAAQAAAAYAAAAOAAsAAQAAAAYAAAAPAAsAAQAAAAYAAAAQAAsAAQAAAAYAAAARAAsAAQAAAAYAAAASAAsAAQAAAAYAAAATAAsAAQAAAAYAAAABAAEAAQAAAAYAAAABAAIAAQAAAAYAAAABAAMAAQAAAAYAAAABAAQAAQAAAAYAAAABAAUAAQAAAAYAAAABAAYAAQAAAAYAAAABAAcAAQAAAAYAAAABAAgAAQAAAAYAAAABAAkAAQAAAAYAAAABAAoAAQAAAAYAAAACAAEAAQAAAAYAAAACAAIAAQAAAAYAAAACAAMAAQAAAAYAAAACAAQAAQAAAAYAAAACAAUAAQAAAAYAAAACAAYAAQAAAAYAAAACAAcAAQAAAAYAAAACAAgAAQAAAAYAAAACAAkAAQAAAAYAAAACAAoAAQAAAAYAAAADAAEAAQAAAAYAAAADAAIAAQAAAAYAAAADAAMAAQAAAAYAAAADAAQAAQAAAAYAAAADAAUAAQAAAAYAAAADAAYAAQAAAAYAAAADAAcAAQAAAAYAAAADAAgAAQAAAAYAAAADAAkAAQAAAAYAAAADAAoAAQAAAAYAAAAEAAEAAQAAAAYAAAAEAAIAAQAAAAYAAAAEAAMAAQAAAAYAAAAEAAQAAQAAAAYAAAAEAAUAAQAAAAYAAAAEAAYAAQAAAAYAAAAEAAcAAQAAAAYAAAAEAAgAAQAAAAYAAAAEAAkAAQAAAAYAAAAEAAoAAQAAAAYAAAAFAAEAAQAAAAYAAAAFAAIAAQAAAAYAAAAFAAMAAQAAAAYAAAAFAAQAAQAAAAYAAAAFAAUAAQAAAAYAAAAFAAYAAQAAAAYAAAAFAAcAAQAAAAYAAAAFAAgAAQAAAAYAAAAFAAkAAQAAAAYAAAAFAAoAAQAAAAYAAAAGAAEAAQAAAAYAAAAGAAIAAQAAAAYAAAAGAAMAAQAAAAYAAAAGAAQAAQAAAAYAAAAGAAUAAQAAAAYAAAAGAAYAAQAAAAYAAAAGAAcAAQAAAAYAAAAGAAgAAQAAAAYAAAAGAAkAAQAAAAYAAAAGAAoAAQAAAAYAAAAHAAEAAQAAAAYAAAAHAAIAAQAAAAYAAAAHAAMAAQAAAAYAAAAHAAQAAQAAAAYAAAAHAAUAAQAAAAYAAAAHAAYAAQAAAAYAAAAHAAcAAQAAAAYAAAAHAAgAAQAAAAYAAAAHAAkAAQAAAAYAAAAHAAoAAQAAAAYAAAAIAAEAAQAAAAYAAAAIAAIAAQAAAAYAAAAIAAMAAQAAAAYAAAAIAAQAAQAAAAYAAAAIAAUAAQAAAAYAAAAIAAYAAQAAAAYAAAAIAAcAAQAAAAYAAAAIAAgAAQAAAAYAAAAIAAkAAQAAAAYAAAAIAAoAAQAAAAYAAAAJAAEAAQAAAAYAAAAJAAIAAQAAAAYAAAAJAAMAAQAAAAYAAAAJAAQAAQAAAAYAAAAJAAUAAQAAAAYAAAAJAAYAAQAAAAYAAAAJAAcAAQAAAAYAAAAJAAgAAQAAAAYAAAAJAAkAAQAAAAYAAAAJAAoAAQAAAAYAAAAKAAEAAQAAAAYAAAAKAAIAAQAAAAYAAAAKAAMAAQAAAAYAAAAKAAQAAQAAAAYAAAAKAAUAAQAAAAYAAAAKAAYAAQAAAAYAAAAKAAcAAQAAAAYAAAAKAAgAAQAAAAYAAAAKAAkAAQAAAAYAAAAKAAoAAQAAAAYAAAALAAEAAQAAAAYAAAALAAIAAQAAAAYAAAALAAMAAQAAAAYAAAALAAQAAQAAAAYAAAALAAUAAQAAAAYAAAALAAYAAQAAAAYAAAALAAcAAQAAAAYAAAALAAgAAQAAAAYAAAALAAkAAQAAAAYAAAALAAoAAQAAAAYAAAAMAAEAAQAAAAYAAAAMAAIAAQAAAAYAAAAMAAMAAQAAAAYAAAAMAAQAAQAAAAYAAAAMAAUAAQAAAAYAAAAMAAYAAQAAAAYAAAAMAAcAAQAAAAYAAAAMAAgAAQAAAAYAAAAMAAkAAQAAAAYAAAAMAAoAAQAAAAYAAAANAAEAAQAAAAYAAAANAAIAAQAAAAYAAAANAAMAAQAAAAYAAAANAAQAAQAAAAYAAAANAAUAAQAAAAYAAAANAAYAAQAAAAYAAAANAAcAAQAAAAYAAAANAAgAAQAAAAYAAAANAAkAAQAAAAYAAAANAAoAAQAAAAYAAAAOAAEAAQAAAAYAAAAOAAIAAQAAAAYAAAAOAAMAAQAAAAYAAAAOAAQAAQAAAAYAAAAOAAUAAQAAAAYAAAAOAAYAAQAAAAYAAAAOAAcAAQAAAAYAAAAOAAgAAQAAAAYAAAAOAAkAAQAAAAYAAAAOAAoAAQAAAAYAAAAPAAEAAQAAAAYAAAAPAAIAAQAAAAYAAAAPAAMAAQAAAAYAAAAPAAQAAQAAAAYAAAAPAAUAAQAAAAYAAAAPAAYAAQAAAAYAAAAPAAcAAQAAAAYAAAAPAAgAAQAAAAYAAAAPAAkAAQAAAAYAAAAPAAoAAQAAAAYAAAAQAAEAAQAAAAYAAAAQAAIAAQAAAAYAAAAQAAMAAQAAAAYAAAAQAAQAAQAAAAYAAAAQAAUAAQAAAAYAAAAQAAYAAQAAAAYAAAAQAAcAAQAAAAYAAAAQAAgAAQAAAAYAAAAQAAkAAQAAAAYAAAAQAAoAAQAAAAYAAAARAAEAAQAAAAYAAAARAAIAAQAAAAYAAAARAAMAAQAAAAYAAAARAAQAAQAAAAYAAAARAAUAAQAAAAYAAAARAAYAAQAAAAYAAAARAAcAAQAAAAYAAAARAAgAAQAAAAYAAAARAAkAAQAAAAYAAAARAAoAAQAAAAYAAAASAAEAAQAAAAYAAAASAAIAAQAAAAYAAAASAAMAAQAAAAYAAAASAAQAAQAAAAYAAAASAAUAAQAAAAYAAAASAAYAAQAAAAYAAAASAAcAAQAAAAYAAAASAAgAAQAAAAYAAAASAAkAAQAAAAYAAAASAAoAAQAAAAYAAAA=")
tile_set = ExtResource("1_hreld")

[node name="Props" type="TileMapLayer" parent="Visuals"]
modulate = Color(1, 1, 1, 0.427451)
use_parent_material = true
tile_map_data = PackedByteArray("AAAQAAAAAQAAABQAAAASAAAAAQABABQAAAARAAQAAQABABQAAAARAAcAAQAAABQAAAATAAUAAQAAABQAAAASAAkAAQABABQAAAABAAkAAQAAABQAAAABAAYAAQABABQAAAACAAAAAQABABQAAAAAAAAAAQAAABQAAAATAAIAAQACABMAAAASAAYAAQAAABMAAAACAAgAAQAJABMAAAABAAMAAQANABMAAAABAAEAAQAMABMAAAA=")
tile_set = ExtResource("1_hreld")

[node name="Walls" type="TileMapLayer" parent="Visuals"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAFAAgAAQABAAEAAAAGAAgAAQABAAEAAAAHAAgAAQABAAEAAAAIAAgAAQABAAEAAAAJAAgAAQABAAEAAAAKAAgAAQABAAEAAAALAAgAAQABAAEAAAAMAAgAAQABAAEAAAANAAgAAQABAAEAAAAOAAgAAQABAAEAAAAPAAcAAQAAAAEAAAAPAAYAAQAAAAEAAAAPAAUAAQAAAAEAAAAPAAQAAQAAAAEAAAAPAAMAAQAAAAEAAAAPAAIAAQAAAAEAAAAPAAEAAQAAAAEAAAAPAAAAAQAAAAEAAAAEAAcAAQAAAAEAAAAEAAYAAQAAAAEAAAAEAAUAAQAAAAEAAAAEAAQAAQAAAAEAAAAEAAMAAQAAAAEAAAAEAAIAAQAAAAEAAAAEAAEAAQAAAAEAAAAEAAAAAQAAAAEAAAAFAAAAAQABAAEAAAAGAAAAAQABAAEAAAAHAAAAAQABAAEAAAAIAAAAAQABAAEAAAAJAAAAAQABAAEAAAAKAAAAAQABAAEAAAALAAAAAQABAAEAAAAMAAAAAQABAAEAAAANAAAAAQABAAEAAAAOAAAAAQABAAEAAAAEAAgAAQABAAEAAAAPAAgAAQABAAEAAAAEAAoAAQAAAAAAAAAEAAsAAQABAAAAAAAFAAsAAQABAAAAAAAGAAsAAQABAAAAAAAHAAsAAQABAAAAAAAIAAsAAQABAAAAAAAJAAsAAQABAAAAAAAKAAsAAQABAAAAAAALAAsAAQABAAAAAAAMAAsAAQABAAAAAAANAAsAAQABAAAAAAAOAAsAAQABAAAAAAAPAAsAAQABAAAAAAAPAAoAAQAAAAAAAAA=")
tile_set = ExtResource("1_hreld")

[node name="DustParticles" type="GPUParticles2D" parent="Visuals"]
z_index = 99
position = Vector2(320, 180)
amount = 20
texture = ExtResource("2_m4bap")
lifetime = 6.0
process_material = SubResource("ParticleProcessMaterial_76jh2")

[node name="GameArea" type="TileMapLayer" parent="." node_paths=PackedStringArray("unit_grid", "tile_highlighter")]
use_parent_material = true
position = Vector2(160, 32)
tile_map_data = PackedByteArray("AAAAAAEAAQAAAAwAAAAAAAMAAQAAAAwAAAAAAAUAAQAAAAwAAAABAAAAAQACAAwAAAABAAIAAQAAAAwAAAABAAQAAQAAAAwAAAABAAYAAQAAAAwAAAACAAEAAQAAAAwAAAACAAMAAQABAAwAAAACAAUAAQAAAAwAAAADAAAAAQAAAAwAAAADAAIAAQAAAAwAAAADAAQAAQAAAAwAAAADAAYAAQACAAwAAAAEAAEAAQAAAAwAAAAEAAMAAQAAAAwAAAAEAAUAAQAAAAwAAAAFAAAAAQAAAAwAAAAFAAIAAQAAAAwAAAAFAAQAAQAAAAwAAAAFAAYAAQAAAAwAAAAGAAEAAQADAAwAAAAGAAMAAQAAAAwAAAAGAAUAAQADAAwAAAAHAAAAAQAAAAwAAAAHAAIAAQAAAAwAAAAHAAQAAQAAAAwAAAAHAAYAAQAAAAwAAAAIAAEAAQAAAAwAAAAIAAMAAQABAAwAAAAIAAUAAQAAAAwAAAAJAAAAAQAAAAwAAAAJAAIAAQAAAAwAAAAJAAQAAQAAAAwAAAAJAAYAAQABAAwAAAA=")
tile_set = ExtResource("1_hreld")
script = ExtResource("6_73s8l")
unit_grid = NodePath("ArenaUnitGrid")
tile_highlighter = NodePath("TileHighlighter")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Decor" type="TileMapLayer" parent="GameArea"]
modulate = Color(1, 1, 1, 0.592157)
use_parent_material = true
tile_map_data = PackedByteArray("AAAFAAAAAQAAABUAAAAIAAQAAQABABYAAAAJAAEAAQAAABYAAAA=")
tile_set = ExtResource("1_hreld")

[node name="Highlight" type="TileMapLayer" parent="GameArea"]
use_parent_material = true
tile_set = ExtResource("1_hreld")

[node name="ArenaUnitGrid" type="Node2D" parent="GameArea"]
y_sort_enabled = true
script = ExtResource("4_m7ydk")
size = Vector2i(4, 7)

[node name="TileHighlighter" type="Node" parent="GameArea" node_paths=PackedStringArray("play_area", "highlight_layer")]
script = ExtResource("2_855b2")
enabled = false
play_area = NodePath("..")
highlight_layer = NodePath("../Highlight")
tile = Vector2i(3, 0)

[node name="Bench" type="TileMapLayer" parent="." node_paths=PackedStringArray("unit_grid", "tile_highlighter")]
use_parent_material = true
position = Vector2(160, 320)
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAsAAAABAAAAAQAAAAcAAAACAAAAAQAAAAsAAAADAAAAAQAAAAcAAAAEAAAAAQAAAAsAAAAFAAAAAQAAAAcAAAAGAAAAAQAAAAsAAAAHAAAAAQAAAAcAAAAIAAAAAQAAAAsAAAAJAAAAAQAAAAcAAAA=")
tile_set = ExtResource("1_hreld")
script = ExtResource("6_73s8l")
unit_grid = NodePath("BenchUnitGrid")
tile_highlighter = NodePath("TileHighlighter")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Highlight" type="TileMapLayer" parent="Bench"]
use_parent_material = true
tile_set = ExtResource("1_hreld")

[node name="TileHighlighter" type="Node" parent="Bench" node_paths=PackedStringArray("play_area", "highlight_layer")]
script = ExtResource("2_855b2")
enabled = false
play_area = NodePath("..")
highlight_layer = NodePath("../Highlight")
tile = Vector2i(3, 0)

[node name="BenchUnitGrid" type="Node2D" parent="Bench"]
script = ExtResource("4_m7ydk")
size = Vector2i(10, 1)

[node name="BattleGrid" type="Node2D" parent="."]
script = ExtResource("4_m7ydk")
size = Vector2i(10, 7)

[node name="SellPortal" parent="." instance=ExtResource("8_4fftf")]
position = Vector2(80, 288)
unit_pool = ExtResource("10_if8r1")
player_stats = ExtResource("10_n3gg6")
metadata/_edit_lock_ = true

[node name="BenchItem" parent="." instance=ExtResource("11_o7rjm")]
position = Vector2(16, 240)
collision_layer = 16

[node name="BenchItem2" parent="." instance=ExtResource("11_o7rjm")]
position = Vector2(16, 272)
item = ExtResource("12_xr6px")

[node name="BenchItem3" parent="." instance=ExtResource("11_o7rjm")]
position = Vector2(16, 304)
item = ExtResource("13_vspv4")

[node name="UnitMover" type="Node" parent="." node_paths=PackedStringArray("play_areas")]
script = ExtResource("9_snp81")
play_areas = [NodePath("../GameArea"), NodePath("../Bench")]
game_state = ExtResource("17_5rf3s")
unit_place_sound = ExtResource("12_niusb")

[node name="UnitSpawner" type="Node" parent="." node_paths=PackedStringArray("bench", "game_area", "unit_scene_spawner")]
script = ExtResource("13_elhf4")
bench = NodePath("../Bench")
game_area = NodePath("../GameArea")
game_state = ExtResource("17_5rf3s")
unit_scene_spawner = NodePath("SceneSpawner")

[node name="SceneSpawner" type="Node" parent="UnitSpawner"]
script = ExtResource("15_l0cts")
scene = ExtResource("16_ybinm")
metadata/_custom_type_script = "uid://crlwtnh8tx0mn"

[node name="UnitCombiner" type="Node" parent="." node_paths=PackedStringArray("buffer_timer")]
script = ExtResource("11_ex2js")
buffer_timer = NodePath("BufferTimer")
combine_sound = ExtResource("15_2p0aq")

[node name="BufferTimer" type="Timer" parent="UnitCombiner"]
one_shot = true

[node name="BattleHandler" type="Node" parent="." node_paths=PackedStringArray("game_area", "game_area_unit_grid", "battle_unit_grid", "trait_tracker")]
script = ExtResource("16_kcd4n")
game_state = ExtResource("17_5rf3s")
game_area = NodePath("../GameArea")
game_area_unit_grid = NodePath("../GameArea/ArenaUnitGrid")
battle_unit_grid = NodePath("../BattleGrid")
trait_tracker = NodePath("../TraitTracker")

[node name="SceneSpawner" type="Node" parent="BattleHandler"]
script = ExtResource("15_l0cts")
scene = ExtResource("20_ybinm")
metadata/_custom_type_script = "uid://crlwtnh8tx0mn"

[node name="TraitTracker" type="Node" parent="." node_paths=PackedStringArray("arena_grid")]
script = ExtResource("21_5ilg6")
arena_grid = NodePath("../GameArea/ArenaUnitGrid")
metadata/_custom_type_script = "uid://doeqhx1ghnj38"

[node name="DebugDraw" type="Node2D" parent="." node_paths=PackedStringArray("game_area")]
visible = false
position = Vector2(160, 32)
script = ExtResource("18_alc7u")
color = Color(0.521569, 0.443137, 0.0431373, 0.654902)
game_area = NodePath("../GameArea")
metadata/_edit_lock_ = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Shop" parent="UI" instance=ExtResource("13_256pg")]
unique_name_in_owner = true

[node name="Traits" parent="UI" instance=ExtResource("16_uy14c")]
unique_name_in_owner = true

[node name="TeamSizeUI" parent="UI" node_paths=PackedStringArray("arena_grid") instance=ExtResource("17_gxlm5")]
offset_left = -6.0
offset_right = 40.0
player_stats = ExtResource("10_n3gg6")
arena_grid = NodePath("../../GameArea/ArenaUnitGrid")

[node name="StartBattleButton" parent="UI" node_paths=PackedStringArray("arena_grid") instance=ExtResource("22_opmde")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = 28.0
grow_horizontal = 2
game_state = ExtResource("17_5rf3s")
player_stats = ExtResource("10_n3gg6")
arena_grid = NodePath("../../GameArea/ArenaUnitGrid")
